deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 192.168.1.103/bitcoin-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /configs/
      volumes:
        - name: config-volume
          configMap:
            name: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-producer
  labels:
    app: backend-producer
  namespace: default
spec:
  selector:
    matchLabels:
      app: backend-producer
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend-producer
    spec:
      containers:
        - name: backend-producer
          image: 192.168.1.103/bitcoin-backend-producer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /configs/
      volumes:
        - name: config-volume
          configMap:
            name: backend-producer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-consumer
  labels:
    app: backend-consumer
  namespace: default
spec:
  selector:
    matchLabels:
      app: backend-consumer
  replicas: 200
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend-consumer
    spec:
      containers:
        - name: backend-consumer
          image: 192.168.1.103/bitcoin-backend-consumer:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /configs/
      volumes:
        - name: config-volume
          configMap:
            name: backend-consumer
