deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000

--

apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: backend-producer
  labels:
    app: backend-producer
spec:
  type: ClusterIP
  selector:
    app: backend-producer
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
